Reestructurar app de métodos estáticos a POO

--- a/Library_Excel/Library_Excel.csproj
+++ b/Library_Excel/Library_Excel.csproj
@@ -61,7 +61,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Excel.cs" />
+    <Compile Include="Cell.cs" />
+    <Compile Include="CellStyle.cs" />
+    <Compile Include="Sheet.cs" />
+    <Compile Include="ExcelBook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
